--- a/SistemaInventarioV7/Areas/Admin/Views/Categoria/Index.cshtml
+++ b/SistemaInventarioV7/Areas/Admin/Views/Categoria/Index.cshtml
@@ -6,12 +6,12 @@
 
 <div class="row">
     <div class="col-lg-10">
-        <h2 class="text-primary">Lista de bodegas</h2>
+        <h2 class="text-primary">Lista de Categorías</h2>
     </div>
     <div class="col-lg-2">
         <a class="btn btn-outline-primary" asp-action="Upsert">
             <i class="bi bi-plus-square-fill"></i>
-            Crear nueva Bodega
+            Crear nueva categoría
         </a>
     </div>
 </div>
@@ -33,6 +33,6 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/bodega.js"></script>
+    <script src="~/js/categoria.js"></script>
 }
 
