--- a/SistemaInventarioV7/Views/Shared/_Layout.cshtml
+++ b/SistemaInventarioV7/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,13 +30,14 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle ="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                 Contenido
                             </a>
 
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Bodega" asp-action="Index">Bodegas</a></li>
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Categoria" asp-action="Index">Categorías</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Marca" asp-action="Index">Marcas</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -47,7 +48,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            <partial name="_Notificaciones"/>
+            <partial name="_Notificaciones" />
             @RenderBody()
         </main>
     </div>
