--- a/SistemaInventarioV7/Areas/Admin/Views/Producto/Index.cshtml
+++ b/SistemaInventarioV7/Areas/Admin/Views/Producto/Index.cshtml
@@ -2,38 +2,38 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="row">
-    <div class="col-lg-10">
-        <h2 class="text-primary">Lista de productos</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-10">
+            <h2 class="text-primary">Lista de productos</h2>
+        </div>
+        <div class="col-lg-2">
+            <a class="btn btn-outline-primary" asp-action="Upsert">
+                <i class="bi bi-plus-square-fill"></i>
+                Crear nuevo producto
+            </a>
+        </div>
     </div>
-    <div class="col-lg-2">
-        <a class="btn btn-outline-primary" asp-action="Upsert">
-            <i class="bi bi-plus-square-fill"></i>
-            Crear nuevo producto
-        </a>
+
+    <br />
+
+    <div class="p-4 border rounded bg-light">
+        <table id="tblDatos" class="table table-responsive table-hover">
+            <thead class="table-dark">
+                <tr>
+                    <th>Numero de serie</th>
+                    <th>Descripción</th>
+                    <th>Categoría</th>
+                    <th>Marca</th>
+                    <th>Precio</th>
+                    <th>Estado</th>
+                    <th></th>
+                </tr>
+            </thead>
+
+        </table>
     </div>
 </div>
-
-<br />
-
-<div class="p-4 border rounded bg-light">
-    <table id="tblDatos" class="table table-responsive table-hover">
-        <thead class="table-dark">
-            <tr>
-                <th>Numero de serie</th>
-                <th>Descripción</th>
-                <th>Categoría</th>
-                <th>Marca</th>
-                <th>Precio</th>
-                <th>Estado</th>
-                <th></th>
-            </tr>
-        </thead>
-
-    </table>
-</div>
-
 @section Scripts{
     <script src="~/js/producto.js"></script>
 }
