--- a/SistemaInventarioV7/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/SistemaInventarioV7/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,12 @@
 ﻿@page
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Access denied";
+    ViewData["Title"] = "Acceso negado";
 }
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+   <div class="container">
+        <h1 class="text-danger">@ViewData["Title"]</h1>
+        <p class="text-danger">No tienes permisos para acceder a esta página.</p>
+   </div>
 </header>
