Carro de Compras - Detalle

--- a/SistemaInventarioV7/Views/Shared/_Layout.cshtml
+++ b/SistemaInventarioV7/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
 ﻿@using SistemaInventario.Utilidades;
+@using Microsoft.AspNetCore.Http;
+@inject IHttpContextAccessor httpContextAccessor;
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -80,6 +83,24 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" asp-area="Inventario" asp-controller="Inventario" asp-action="Index">Stock productos</a></li>
                                 </ul>
+                            </li>
+                        }
+
+                        @if(httpContextAccessor.HttpContext.Session.GetInt32(DS.ssCarroCompras) != null)
+                        {
+                            <li>
+                                <a asp-area="Inventario" asp-controller="Carro" asp-action="Index" class="nav-link">
+                                    @{
+                                        var numeroProductos = httpContextAccessor.HttpContext.Session.GetInt32(DS.ssCarroCompras);
+                                    }
+                                    <i class="bi bi-cart-fill text-primary">&nbsp; (@numeroProductos) </i>
+                                </a>      
+                            </li>
+                        }
+                        else
+                        {
+                            <li>           
+                                <i class="bi bi-cart-fill text-primary">&nbsp; (0) </i>
                             </li>
                         }
                     </ul>
