--- a/SistemaInventarioV7/Views/Shared/_Layout.cshtml
+++ b/SistemaInventarioV7/Views/Shared/_Layout.cshtml
@@ -85,6 +85,9 @@
                                 </ul>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Orden" asp-action="Index">Ordenes</a>
+                        </li>
 
                         @if (User.Identity.IsAuthenticated){
                             @if (httpContextAccessor.HttpContext.Session.GetInt32(DS.ssCarroCompras) != null)
